src/assets/scss/_app-body.scss
html, body {
  height: 100vh;
  overflow-x: hidden;
}

.app {
  position: absolute;
  width: 100%;
  user-select: none;
  transition: filter .5s ease-in;

  &:fullscreen {
    background: $body-bg;
  }

  &.theme-loading {
    filter: grayscale(100%);
  }

  @include breakpoint-up-to-md {
    font-size: $font-size-base-lg;
  }
}

.app .app-body {
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
}

.app-body {
  height: 100%;
  width: 100%;
}

